added openapi defs and random func
